@@ -99,6 +99,7 @@
     {+} Optimized code for release language detection (slftp.languagebase)
     {+} Support for rules-checking in !batch,!spread,!check,!pre cmds for groups
     {+} New rules tvlookupdone and imdblookupdone (#67)
+    {+} !rulecp can now copy rules to a differently named target section (#249)
     {#} Fixed !routelock so it doesn't remove normal route when removing lock
     {#} precmd can be removed by omiting precommand via !setprecmd (#178)
     {#} Remove language and 2160(p|i) tags before searching on TVmaze
